Final unit tests complete, coverage at 70%.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,7 +100,7 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}:${file.reference.emma.jar}
+    ${build.test.classes.dir}
 source.encoding=windows-1252
 src.drawable-mdpi.dir=res\\drawable-mdpi
 src.res_android.dir=res_android
