--- a/nbproject/coverage.properties
+++ b/nbproject/coverage.properties
@@ -1,6 +1,6 @@
 #coverage viewer module properties for project
-#Wed May 06 10:56:02 EDT 2015
-coverage.activity=ON
+#Sun May 10 23:49:57 EDT 2015
+coverage.activity=OFF
 project.type=java
-coverage.templateFile=coverage/template.emma
 coverage.coverageFile=coverage/coverage.emma
+coverage.templateFile=coverage/template.emma
